lambok issue  fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=tempdb1
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=tempdb2
 spring.datasource.username=sa
 spring.datasource.password=Vinit@098
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
-
+logging.level.org.hibernate.sql = DEBUG
 currency.converter.api = https://api.exchangeratesapi.io/latest
 base.currency = INR
