--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=tempdb2
-spring.datasource.username=sa
-spring.datasource.password=Vinit@098
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=<DATABASE_NAME>
+spring.datasource.username=<USER_NAME>
+spring.datasource.password=<PASSWORD>
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
